[gd_scene load_steps=14 format=3 uid="uid://dy8ohrl7j24qy"]

[ext_resource type="Script" uid="uid://dg7jodlol6iao" path="res://scenes/game_elements/characters/enemies/mothsache/mothsache.gd" id="1_f7683"]
[ext_resource type="SpriteFrames" uid="uid://b0nyiuolbvnl0" path="res://scenes/game_elements/characters/enemies/mothsache/components/mothsache_frames.tres" id="1_tm0nn"]
[ext_resource type="AudioStream" uid="uid://dgpeb1dtmfqud" path="res://assets/third_party/sounds/characters/enemies/guard/AlertSound.ogg" id="2_8q7cb"]
[ext_resource type="Script" uid="uid://dy68p7gf07pi3" path="res://scenes/game_logic/sprite_behaviors/character_sprite_behavior.gd" id="3_fmv22"]
[ext_resource type="Script" uid="uid://cx0sk4uhvnii0" path="res://scenes/game_logic/walk_behaviors/erratic_walk_behavior.gd" id="3_xxd2s"]
[ext_resource type="Script" uid="uid://csev4hv57utxv" path="res://scenes/game_logic/walk_behaviors/character_speeds.gd" id="4_xxd2s"]
[ext_resource type="Texture2D" uid="uid://c75ofhy3swhj3" path="res://scenes/game_elements/characters/enemies/guard/components/exclamation_mark.png" id="7_8q7cb"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0607a"]

[sub_resource type="Resource" id="Resource_fmv22"]
script = ExtResource("4_xxd2s")
walk_speed = 100.0
metadata/_custom_type_script = "uid://csev4hv57utxv"

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_e2qj4"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_y5shg"]
light_mode = 1

[sub_resource type="LabelSettings" id="LabelSettings_uv1ho"]
outline_size = 3
outline_color = Color(0, 0, 0, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_e2qj4"]
radius = 48.0

[node name="Mothsache" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 531
motion_mode = 1
script = ExtResource("1_f7683")
chase_speed = 200.0
alert_sound_stream = ExtResource("2_8q7cb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_0607a")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -37)
sprite_frames = ExtResource("1_tm0nn")
animation = &"attack_anticipation"

[node name="CharacterSpriteBehavior" type="Node2D" parent="AnimatedSprite2D" node_paths=PackedStringArray("character", "sprite")]
unique_name_in_owner = true
script = ExtResource("3_fmv22")
character = NodePath("../..")
sprite = NodePath("..")
metadata/_custom_type_script = "uid://dy68p7gf07pi3"

[node name="ErraticWalkBehavior" type="Node2D" parent="." node_paths=PackedStringArray("character")]
unique_name_in_owner = true
script = ExtResource("3_xxd2s")
speeds = SubResource("Resource_fmv22")
travel_distance = 100.0
character = NodePath("..")

[node name="BehaviorTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true
autostart = true

[node name="PlayerAwareness" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0)
z_index = 1
material = SubResource("CanvasItemMaterial_e2qj4")
offset_left = -62.0
offset_top = -201.0
offset_right = 62.0
offset_bottom = -77.0
pivot_offset = Vector2(62, 102)
step = 0.01
fill_mode = 3
nine_patch_stretch = true
texture_under = ExtResource("7_8q7cb")
texture_progress = ExtResource("7_8q7cb")
tint_under = Color(1, 1, 1, 0.392157)
tint_progress = Color(1, 1, 0, 1)

[node name="DebugInfo" type="Label" parent="."]
unique_name_in_owner = true
visible = false
z_index = 100
material = SubResource("CanvasItemMaterial_y5shg")
offset_left = -36.0
offset_top = 20.0
offset_right = 185.0
offset_bottom = 199.0
text = "POS: (x, y)
State: STATE_NAME
Current Speed: X
Target Speed: Y "
label_settings = SubResource("LabelSettings_uv1ho")

[node name="AttackRadius" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="Radius" type="CollisionShape2D" parent="AttackRadius"]
unique_name_in_owner = true
position = Vector2(0, -29.865)
scale = Vector2(1.075, 1.075)
shape = SubResource("CircleShape2D_e2qj4")
debug_color = Color(1.540184e-06, 0.5658079, 0.8595374, 0.41960785)

[node name="DetectionArea" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="DetectionRadius" type="CollisionShape2D" parent="DetectionArea"]
unique_name_in_owner = true
position = Vector2(0, -48)
scale = Vector2(4.5, 4.5)
shape = SubResource("CircleShape2D_e2qj4")
debug_color = Color(1, 0, 0, 0.41960785)

[node name="Sounds" type="Node2D" parent="."]

[node name="AlertSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
volume_db = -5.0
bus = &"SFX"

[node name="FootSound" type="AudioStreamPlayer2D" parent="Sounds"]
unique_name_in_owner = true
visible = false
volume_db = -2.0
max_distance = 350.0
bus = &"SFX"

[node name="FireSound" type="AudioStreamPlayer2D" parent="Sounds"]
unique_name_in_owner = true
visible = false
volume_db = -2.0
autoplay = true
max_distance = 500.0
attenuation = 2.0
bus = &"SFX"

[node name="TorchHitSound" type="AudioStreamPlayer2D" parent="Sounds"]
unique_name_in_owner = true
visible = false
volume_db = -2.0
max_distance = 500.0
bus = &"SFX"

[connection signal="timeout" from="BehaviorTimer" to="." method="_on_BehaviorTimer_timeout"]
[connection signal="body_entered" from="AttackRadius" to="." method="_on_attack_radius_body_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
